--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding:0;
+    background-color: whitesmoke;
+
+    /* overflow: hidden; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.heading{
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+   max-width: 700px;
+   margin:10px auto;
+}
+.hotel-cards{
+    width:100%;
+    margin:20px auto 40px;
+    padding: 15px 24px;
+    box-shadow:  7px 13px 13px 7px rgba(82, 79, 79, 0.116);
+    /* background-color: whitesmoke; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hotel-cards img{
+    width:700px;
+    border-radius: 7px;
+    margin-bottom:12px;
 }
 
-.App-link {
-  color: #61dafb;
+.img-heading{
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom: 7px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-para{
+    margin-bottom: 11px;
 }
+
+.hotel-cards button{
+    background-color: red;
+    padding:12px 24px;
+    border-radius: 10px;
+    color:white;
+    border:2px solid red;
+    margin-top:9px;
+    margin-bottom: 16px;
+}
+
